--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -146,3 +146,6 @@ install(FILES plugin_description.xml
 install(DIRECTORY include/${PROJECT_NAME}/
         DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION}
         FILES_MATCHING PATTERN "*.h")
+
+install(DIRECTORY config/
+DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}/config)
